# hlmedia

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE_FFMPEG.md  README.md  haxelib.json  hxformat.json
.github/workflows/: build.yml
cmake/: FFmpeg.cmake
examples/: .gitignore  README.md  copy-runtime.ps1
examples/miniaudio/: Main.hx  MiniAudioSink.hx  README.md  build.hxml
examples/openal/: Main.hx  OpenALSink.hx  README.md  build.hxml
examples/openal/res/video/: README.md
examples/performance/: Main.hx  OpenALSink.hx  README.md  build.hxml
examples/res/video/: README.md
hlmedia/: MediaBuild.hx  MediaClock.hx  MediaError.hx  VideoBitmap.hx  VideoFrame.hx  VideoInfo.hx  VideoPlayer.hx  VideoShader.hx  VideoTexture.hx
hlmedia/audio/: AudioSink.hx  NullAudioSink.hx
hlmedia/native/: NativeMedia.hx
hlmedia/types/: MediaBuildInfo.hx  VideoColorRange.hx  VideoColorSpace.hx  VideoDecodeMode.hx  VideoFrame.hx  VideoInfo.hx  VideoPixelFormat.hx  VideoPlayerOptions.hx  VideoStats.hx
native/: CMakeLists.txt
native/include/: audio_queue.h  frame_buffer_pool.h  frame_queue.h  hlmedia.h  media_decoder.h  media_types.h
native/src/: audio_queue.c  frame_buffer_pool.c  frame_queue.c  hlmedia.c  media_decoder.c
scripts/ci/: create-build-info.ps1  download-ffmpeg-shared.ps1  download-hashlink.ps1  stage-package.ps1  verify-package.ps1
tests/: .gitignore  test-hl.bat
tests/testMain/: test-hl.hxml
tests/testMain/src/: Test.hx
tools/: encode_mp4_h264_aac.md
